docs: 자바 메모리 구조, static/오토박싱/GC/누수/운영 팁 등 고급 정리 추가
- static 변수와 메서드 영역 관리, 클래스 언로드/누수 사례 반영
- 리터럴 vs 객체/GC, 오토박싱 캐싱, 약한 참조, 불변 설계, JVM 메모리 옵션 등 포괄